Añadido con contenido del blog

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
         <imgimg"/Git-Icon-1788C.png">
         <h1>BLOG CURSO GIT</h1>
     </div>
+    <div>
+        Aqui ira el contenido del blog
+    </div>
 </body>
 </html>
