Created navbar(se escribe todo en ingles y pasado)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +10,9 @@
     <title>Document</title> 
 </head>
 
-<body class="bar">
-    <div class= "logo" >
-        <imgimg"/Git-Icon-1788C.png">
+<body>
+    <div class="bar">
+        <img class= "logo" src="/git.png">
         <h1>BLOG CURSO GIT</h1>
     </div>
     <div>
